<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.secondtry.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu1"
        android:orderInCategory="100"
        android:title="@string/menu1"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu2"
        android:orderInCategory="100"
        android:title="@string/menu2"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu3"
        android:orderInCategory="100"
        android:title="@string/menu3"
        app:showAsAction="never"/>
    <item
        android:id="@+id/activity2"
        android:orderInCategory="100"
        android:title="Activity2"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_close"
        android:orderInCategory="100"
        android:title="@string/action_close"
        app:showAsAction="never"/>

</menu>